# jetemail-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: cli.rs  client.rs  config.rs  main.rs  output.rs  version_check.rs
src/commands/: auth.rs  completion.rs  config_cmd.rs  doctor.rs  email.rs  mod.rs  update.rs  util.rs  webhooks.rs
src/commands/inbound/: account.rs  destinations.rs  domains.rs  filters.rs  logs.rs  mod.rs  quarantine.rs  settings.rs
src/commands/outbound/: domains.rs  keys.rs  logs.rs  mod.rs  smarthost.rs  suppression.rs
src/tui/: logs.rs  mod.rs
