[package]
name = "jetemail-cli"
version = "0.1.5"
edition = "2021"
rust-version = "1.74"
description = "Command-line interface and TUI for the JetEmail API"
authors = ["JetEmail"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jetemail/jetemail-cli"
homepage = "https://jetemail.com"
documentation = "https://github.com/jetemail/jetemail-cli#readme"
readme = "README.md"
keywords = ["jetemail", "email", "cli", "smtp", "transactional"]
categories = ["command-line-utilities", "email"]
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE-*",
    "README.md",
]

[[bin]]
name = "jetemail"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
comfy-table = { version = "7", default-features = false, features = ["custom_styling"] }
crossterm = "0.29"
dialoguer = { version = "0.12", default-features = false, features = ["password"] }
directories = "6"
indicatif = "0.18"
mime_guess = "2"
percent-encoding = "2"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "gzip", "brotli", "multipart"] }
self-replace = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
toml = "1"
url = "2"
zeroize = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# ─────────────────────────── cargo-dist ───────────────────────────
# Release tooling. Run `cargo install cargo-dist`, then `dist init`
# locks the version & regenerates `.github/workflows/release.yml`.
# Documentation: https://opensource.axo.dev/cargo-dist/
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell", "powershell", "homebrew"]
tap = "jetemail/homebrew-cli"
publish-jobs = ["homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"
install-updater = false
pr-run-mode = "plan"
